--- a/doc/paper/paper.bib
+++ b/doc/paper/paper.bib
@@ -317,7 +317,8 @@
   journal      = {Artif. Intell.},
   volume       = {331},
   pages        = {104114},
-  year         = {2024}
+  year         = {2024},
+  doi          = {10.1016/J.ARTINT.2024.104114}
 }
 @article{DBLP:journals/ijar/AzzoliniR23,
   author       = {Damiano Azzolini and
@@ -327,7 +328,8 @@
   journal      = {Int. J. Approx. Reason.},
   volume       = {163},
   pages        = {109040},
-  year         = {2023}
+  year         = {2023},
+  doi          = {10.1016/J.IJAR.2023.109040}
 }
 @article{DBLP:journals/ijar/RiguzziBZCL17,
   author       = {Fabrizio Riguzzi and
@@ -340,7 +342,8 @@
   journal      = {Int. J. Approx. Reason.},
   volume       = {80},
   pages        = {313--333},
-  year         = {2017}
+  year         = {2017},
+  doi          = {10.1016/J.IJAR.2016.10.002}
 }
 @inproceedings{DBLP:conf/ilp/BarvinekB0ZK21,
   author       = {J{\'{a}}chym Barv{\'{\i}}nek and
@@ -354,5 +357,6 @@
   volume       = {13191},
   pages        = {17--25},
   publisher    = {Springer},
-  year         = {2021}
+  year         = {2021},
+  doi          = {10.1007/978-3-030-97454-1\_2}
 }
