--- a/doc/paper/paper.tex
+++ b/doc/paper/paper.tex
@@ -68,6 +68,7 @@
 \usepackage{tikz}
 \usepackage{microtype}
 \usepackage[backgroundcolor=lightgray]{todonotes}
+\usepackage{mathtools}
 
 \usetikzlibrary{arrows.meta}
 \usetikzlibrary{fit}
@@ -139,7 +140,9 @@
   For the entire paper:
   \begin{itemize}
     \item Finish adding DOIs or URLs to (non-book) references (and reformatting
-          indentation) (and check reference formatting)
+          indentation) (and check reference formatting) (is the part about
+          non-book references correct? Check previous proceedings) (maybe one
+          more exception (graded logics)?) (I might be done)
     \item Sentence vs formula: be consistent and not confusing
     \item 15 pages excluding references
     \item Go through the rest of formatting instructions (in GTD)
@@ -254,6 +257,7 @@ Finally, in \cref{sec:algebra}, we introduce the terminology used to describe
 the output of the original \textsc{Crane} algorithm, i.e., functions and
 equations that define them.
 
+\paragraph*{Notation}
 We use $\mathbb{N}_{0}$ to represent the set of non-negative integers. In both
 algebra and logic, we write $S\sigma$ to denote the application of a
 \emph{substitution} $\sigma$ to an expression $S$, where
@@ -374,24 +378,44 @@ constrains all models to have \emph{precisely three positive literals with the
 
 \subsection{First-Order Model Counting}
 
-\todo[inline,caption={}]{
-  \begin{itemize}
-    \item Write a proper introductory paragraph
-    \item Maybe a bit more (easy-to-understand) detail about FOMC?
-  \end{itemize}
-}
+In this section, we will formally define FOMC and its weighted variant. Note
+that, although this work focuses on FOMC, for sentences with existential
+quantifiers, computing the FOMC using \Cranetwo{} requires the use of WFOMC\@.
+For such sentences, Skolemization (described in \cref{sec:crane}) introduces
+predicates with non-unary weights that must be accounted for to compute the
+correct model count. Additionally, our formulation of the definition of WFOMC is
+somewhat complicated by the need to support any number of domains.
 
-\begin{definition}[Model]\label{def:model}
+\begin{definition}[Structure, model]\label{def:model}
   Let $\phi$ be a formula in \FO{}. For each predicate $P/n$ in $\phi$, let
   ${(\Delta_{i}^{P})}_{i=1}^{n}$ be a list of the corresponding domains. Let
-  $\sigma$ be a map from the domains of $\phi$ to their interpretations as sets
-  such that the sets are pairwise disjoint, and the constants in $\phi$ are
-  included in the corresponding domains. A \emph{structure} of $\phi$ is a set
-  $M$ of ground literals defined by adding to $M$ either $P(\mathbf{t})$ or
-  $\neg P(\mathbf{t})$ for every predicate $P/n$ in $\phi$ and $n$-tuple
-  $\mathbf{t} \in \prod_{i=1}^{n} \sigma(\Delta_{i}^{P})$. A structure is a
-  \emph{model} if it makes $\phi$ valid.
+  $\sigma$ be a map from the domains of $\phi$ to their interpretations as
+  finite sets such that the sets are pairwise disjoint, and the constants in
+  $\phi$ are included in the corresponding domains. A \emph{structure} of $\phi$
+  is a set $M$ of ground literals defined by adding to $M$ either
+  $P(\mathbf{t})$ or $\neg P(\mathbf{t})$ for every predicate $P/n$ in $\phi$
+  and $n$-tuple $\mathbf{t} \in \prod_{i=1}^{n} \sigma(\Delta_{i}^{P})$. A
+  structure is a \emph{model} if it makes $\phi$ valid.
 \end{definition}
+
+\begin{example}[Counting bijections]\label{example:overall}
+  Let $\phi$ be the following formula (previously examined by Dilkas and
+  Belle~\cite{DBLP:conf/kr/DilkasB23}) that defines predicate $P$ as a bijection
+  between two domains $\Gamma$ and $\Delta$:
+  \[
+    \begin{gathered}
+      (\forall x \in \Gamma\text{. }\exists y \in \Delta\text{. }P(x, y))\land{}\\
+      (\forall y \in \Delta\text{. }\exists x \in \Gamma\text{. }P(x, y))\land{}\\
+      (\forall x \in \Gamma\text{. }\forall y, z \in \Delta\text{. }P(x, y) \land P(x, z) \Rightarrow y = z)\land{}\\
+      (\forall x, z \in \Gamma\text{. }\forall y \in \Delta\text{. }P(x, y) \land P(z, y) \Rightarrow x = z).
+    \end{gathered}
+  \]
+  Let $\sigma$ be defined as $\sigma(\Gamma) \coloneqq \{\, 1, 2\,\}$, and
+  $\sigma(\Delta) \coloneqq \{\,a, b\,\}$. Then $\phi$ has two models:
+  \[
+    \{\, P(1, a), P(2, b), \neg P(1, b), \neg P(2, a) \,\} \qquad \text{and} \qquad \{\, P(1, b), P(2, a), \neg P(1, a), \neg P(2, b) \,\}.
+  \]
+\end{example}
 
 \begin{remark*}
   The distinctness of domains is important in two ways. First, in terms of
@@ -401,14 +425,6 @@ constrains all models to have \emph{precisely three positive literals with the
   decomposable for the FOKC algorithm. With distinct domains, the algorithm can
   make assumptions or deductions about, e.g., the first domain of predicate $P$
   without worrying how (or if) they apply to the second domain.
-\end{remark*}
-
-\begin{remark*}
-  Even though this work focuses on FOMC, for sentences with existential
-  quantifiers, computing FOMC using \Cranetwo{} requires the use of WFOMC. For
-  such sentences, Skolemization (described in \cref{sec:crane}) introduces
-  predicates with non-unary weights that must be accounted for to compute the
-  correct model count.
 \end{remark*}
 
 \begin{definition}[WFOMC instance]\label{def:instance}
@@ -427,34 +443,6 @@ constrains all models to have \emph{precisely three positive literals with the
   \end{equation}
   where the sum is over all models of $\phi$.
 \end{definition}
-
-\begin{example}[Counting functions]\label{example:functions}
-  To define predicate $P$ as a function from a domain $\Delta$ to itself, in
-  \Ctwo{} one would write $\forall x \in \Delta\text{.
-  }\exists^{=1} y \in \Delta\text{. }P(x, y)$. In \UFO{}, the same could be
-  written as
-  \begin{equation}\label[formula]{eq:functions1}
-    (\forall x, y \in \Delta\text{. }S(x) \lor \neg P(x, y)) \land (|P| = |\Delta|),
-  \end{equation}
-  where $w^{-}(S) = -1$. Although \cref{eq:functions1} has more models compared
-  to its counterpart in \Ctwo{}, the negative weight $w^{-}(S) = -1$ makes some
-  of the terms in \cref{eq:wfomc} cancel out.
-
-  Equivalently, in \FO{} we would write
-  \begin{equation}\label[formula]{eq:fo}
-    \begin{gathered}
-      (\forall x \in \Gamma\text{. }\exists y \in \Delta\text{. }P(x, y)) \land (\forall x \in \Gamma\text{. }\forall y, z \in \Delta\text{. }P(x, y) \land P(x, z) \Rightarrow y = z).
-    \end{gathered}
-  \end{equation}
-  The first clause asserts that each $x$ must have at least one corresponding
-  $y$, while the second statement adds the condition that if $x$ is mapped to
-  both $y$ and $z$, then $y$ must equal $z$. It is important to note that
-  \cref{eq:fo} is written with two domains instead of just one. However, we can
-  still determine the correct number of functions by assuming that the sizes of
-  $\Gamma$ and $\Delta$ are equal. This formulation, as observed by Dilkas and
-  Belle~\cite{DBLP:conf/kr/DilkasB23}, can prove beneficial in enabling FOKC
-  algorithms to find efficient solutions.
-\end{example}
 
 \subsection{First-Order Knowledge Compilation}\label{sec:crane}
 
@@ -638,25 +626,10 @@ formulas and adds the resulting base case equations to $\mathcal{E}$.
   \textsc{Crane} on various derived formulas.
 \end{remark*}
 
-\todo[inline]{Move this example right after the definition of WFOMC (or near the
-  definition of a model)}
-
-\begin{example}[Counting bijections]\label{example:overall}
-  Consider the following formula (previously examined by Dilkas and
-  Belle~\cite{DBLP:conf/kr/DilkasB23}) that defines predicate $P$ as a bijection
-  between two sets $\Gamma$ and $\Delta$:
-  \[
-    \begin{gathered}
-      (\forall x \in \Gamma\text{. }\exists y \in \Delta\text{. }P(x, y))\land{}\\
-      (\forall y \in \Delta\text{. }\exists x \in \Gamma\text{. }P(x, y))\land{}\\
-      (\forall x \in \Gamma\text{. }\forall y, z \in \Delta\text{. }P(x, y) \land P(x, z) \Rightarrow y = z)\land{}\\
-      (\forall x, z \in \Gamma\text{. }\forall y \in \Delta\text{. }P(x, y) \land P(z, y) \Rightarrow x = z).
-    \end{gathered}
-  \]
-  We specifically examine the first solution returned by \Cranetwo{} for this
-  formula.
-
-  After \autoref{line:second}, we have
+\begin{example}\label{example:overalltwo}
+  Let us examine the first solution returned by \Cranetwo{} for the
+  bijection-counting problem in \cref{example:overall}. After
+  \autoref{line:second}, we have
   \begin{align*}
     \mathcal{E} &= \left\{\,\begin{aligned}f(m, n) &= \sum_{l=0}^{n} \binom{n}{l}{(-1)}^{n-l}g(l, m),\\ g(l, m) &= g(l-1, m) + mg(l-1, m-1)\end{aligned}\,\right\};\\
     \mathcal{D} &= \{\, (f, 1) \mapsto \Gamma, (f, 2) \mapsto \Delta, (g, 1) \mapsto \Delta^{\top}, (g, 2) \mapsto \Gamma \,\},
@@ -688,7 +661,7 @@ depend on $m$. Additionally, $[a \le m \le b] = \begin{cases}
 \end{cases}$.
 \Simplify transforms this pattern into
 $f(a) + f(a+1) + \cdots + f(\min\{\, n, b \,\})$. For instance, in the case of
-\cref{example:overall}, \Simplify transforms
+\cref{example:overalltwo}, \Simplify transforms
 $g(l, m) = \sum_{k=0}^{m}[0 \le k \le 1]\binom{m}{k}g(l-1, m-k)$ into
 $g(l, m) = g(l-1, m) + mg(l-1, m-1)$.
 
@@ -726,7 +699,7 @@ case, a base case is added for each constant from $0$ up to (but not including)
 $c_{i}$.
 
 \begin{example}
-  Consider the recursive function $g$ from \cref{example:overall}.
+  Consider the recursive function $g$ from \cref{example:overalltwo}.
   \FindBaseCases iterates over two function calls: $g(l-1, m)$ and
   $g(l-1, m-1)$. The former produces the base case $g(0, m)$, while the latter
   produces both $g(0, m)$ and $g(l, 0)$.
@@ -990,7 +963,7 @@ C++ program is produced, it can be executed with different command-line
 arguments to compute the model count of the formula for various domain sizes.
 
 \begin{algorithm}[t]
-  \caption{A sketch of the C++ program for the bijection-counting problem in \cref{example:overall}, particularly highlighting the recursive definition of function $g$.}\label{alg:cpp}
+  \caption{A sketch of the C++ program for the equations in \cref{example:overalltwo}, particularly highlighting the recursive definition of function $g$.}\label{alg:cpp}
   initialise $\Cache_{g(0, m)}$, $\Cache_{g(l, 0)}$, $\Cache_{g}$, and $\Cache_{f}$\;
   \DontPrintSemicolon
   \textbf{Function} $g_{0,m}(m)$\textbf{:} \dots\;
@@ -1088,8 +1061,39 @@ while the other algorithms were executed on the Java Virtual Machine 1.8.0\_201.
     \item More benchmarks from NOT my work
     \item Make sure it's clear what the `raw' instances are
     \item Don't emphasise that the benchmarks come from my previous work
+    \item Integrate the example below into the text, possibly moving irrelevant
+          details (such as the formulas in other logics) to supplementary
+          material
   \end{itemize}
 }
+
+\begin{example}[Counting functions]\label{example:functions}
+  To define predicate $P$ as a function from a domain $\Delta$ to itself, in
+  \Ctwo{} one would write $\forall x \in \Delta\text{.
+  }\exists^{=1} y \in \Delta\text{. }P(x, y)$. In \UFO{}, the same could be
+  written as
+  \begin{equation}\label[formula]{eq:functions1}
+    (\forall x, y \in \Delta\text{. }S(x) \lor \neg P(x, y)) \land (|P| = |\Delta|),
+  \end{equation}
+  where $w^{-}(S) = -1$. Although \cref{eq:functions1} has more models compared
+  to its counterpart in \Ctwo{}, the negative weight $w^{-}(S) = -1$ makes some
+  of the terms in \cref{eq:wfomc} cancel out.
+
+  Equivalently, in \FO{} we would write
+  \begin{equation}\label[formula]{eq:fo}
+    \begin{gathered}
+      (\forall x \in \Gamma\text{. }\exists y \in \Delta\text{. }P(x, y)) \land (\forall x \in \Gamma\text{. }\forall y, z \in \Delta\text{. }P(x, y) \land P(x, z) \Rightarrow y = z).
+    \end{gathered}
+  \end{equation}
+  The first clause asserts that each $x$ must have at least one corresponding
+  $y$, while the second statement adds the condition that if $x$ is mapped to
+  both $y$ and $z$, then $y$ must equal $z$. It is important to note that
+  \cref{eq:fo} is written with two domains instead of just one. However, we can
+  still determine the correct number of functions by assuming that the sizes of
+  $\Gamma$ and $\Delta$ are equal. This formulation, as observed by Dilkas and
+  Belle~\cite{DBLP:conf/kr/DilkasB23}, can prove beneficial in enabling FOKC
+  algorithms to find efficient solutions.
+\end{example}
 
 We compare these algorithms using three benchmarks from previous studies. The
 first benchmark is the function-counting problem from \cref{example:functions},
